--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {},
+    "autoload": {
+        "files": ["src/Office365_Client.php"]
+    }
 }
